force-app/main/default/objects/CMS_1500_Claim_Generation__c/CMS_1500_Claim_Generation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CMS 1500 Claim Generation</label>
</CustomObject>