force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/Accept_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Accept_Assignment__c</fullName>
    <label>Accept Assignment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>