force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/After_every_hours__c.field-meta.xml
<CustomField>
    <fullName>After_every_hours__c</fullName>
    <label>After every hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>