force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/Auto_Accident__c.field-meta.xml
<CustomField>
    <fullName>Auto_Accident__c</fullName>
    <label>Auto-Accident</label>
    <length>20</length>
    <type>Text</type>
</CustomField>