force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/Bill_Provider_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bill_Provider_Phone__c</fullName>
    <label>Billing Provider Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>