force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/Billing_Provider_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Address__c</fullName>
    <label>Billing Provider Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>