force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/Billing_Provider_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_City__c</fullName>
    <label>Billing Provider City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>