force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/Billing_Provider_NPI__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_NPI__c</fullName>
    <label>Billing Provider NPI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>