force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/Billing_Provider_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Tax_ID__c</fullName>
    <label>Billing Provider Tax ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>