force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/Billing_Provider_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Zipcode__c</fullName>
    <label>Billing Provider Zipcode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>