force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/days__c.field-meta.xml
<CustomField>
    <fullName>days__c</fullName>
    <label>days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>