force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/Employment__c.field-meta.xml
<CustomField>
    <fullName>Employment__c</fullName>
    <label>Employment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>