force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/Federal_Tax_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_Id_Number__c</fullName>
    <label>Federal Tax Id Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>