force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/No_of_Hours_Open_Procedure__c.field-meta.xml
<CustomField>
    <fullName>No_of_Hours_Open_Procedure__c</fullName>
    <label>No of Hours(Open Procedure)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>