force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/Other_Accident__c.field-meta.xml
<CustomField>
    <fullName>Other_Accident__c</fullName>
    <label>Other Accident</label>
    <length>20</length>
    <type>Text</type>
</CustomField>