force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/Service_Facility_Location_Info_NPI__c.field-meta.xml
<CustomField>
    <fullName>Service_Facility_Location_Info_NPI__c</fullName>
    <label>Service Facility Location Info NPI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>