force-app/main/default/objects/CMS_1500_Claim_Generation__c/fields/Service_Facility_Location_Information__c.field-meta.xml
<CustomField>
    <fullName>Service_Facility_Location_Information__c</fullName>
    <label>Service Facility Location Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>